--- a/wprawki.ipynb
+++ b/wprawki.ipynb
@@ -6,7 +6,6 @@
       "name": "wprawki.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "rjAVpCGpOIbD",
         "ssOD9fcUOk_I",
         "2xehXSWDPJap",
         "ABRKwnD_OnLh",
@@ -19,7 +18,7 @@
         "Oj3j7pijRVoV",
         "XeQ0_1BgPUkH"
       ],
-      "authorship_tag": "ABX9TyNrB57vdLYjkTDe1Nz7YQuG",
+      "authorship_tag": "ABX9TyNhh4EvZfM18kx+TPUKXbBB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,7 +108,7 @@
         "id": "O5aGulhrOVve"
       },
       "source": [
-        "## Wprawka 3\n",
+        "### Wprawka 3\n",
         "\n",
         "Stwórz zmienną `t` i przypisz jej napis: „Thor, syn Odyna, odpowiednik południowogermańskiego Donara, jeden z głównych bogów nordyckich”. Następnie wydrukuj napis złożony z liter zmiennej t w następującej kolejności: 19, 12, od 0 do 2 włącznie, 8, 5, 60, 23, 6, 0, 5, 6, 32, 19, 23, 3. Zmień napis, aby zaczynał się dużą literą, a pozostałe miał małe. Dodaj wykrzyknij na końcu. Czy zgadzasz się z hasłem, które się wyświetliło? ;-)\n"
       ]
@@ -131,7 +130,7 @@
         "id": "pdy11aQcOc9Z"
       },
       "source": [
-        "## Wprawka 4\n",
+        "### Wprawka 4\n",
         "\n",
         "Stwórz zmienną `entry` i przypisz jej tekst komentarza o treści „Nie zgadzam się z tym stanem rzeczy, kurza twarz!”. Następnie stwórz zmienną `vulgarism` i przypisz jej wartość „kurza twarz”. Sprawdź, czy komentarz zawiera wyrażenie obraźliwe i jeśli tak, wydrukuj napis „Komentarz zawiera wyrażenie uznane za obraźliwe.”."
       ]
