--- a/python_dla_kazdego/wprawki.ipynb
+++ b/python_dla_kazdego/wprawki.ipynb
@@ -14,11 +14,9 @@
         "NVAxWlkzPw42",
         "1ASbnfjSPy7C",
         "sCZ3LeVlP03k",
-        "XfI9XelVQBv3",
-        "Oj3j7pijRVoV",
-        "XeQ0_1BgPUkH"
+        "XfI9XelVQBv3"
       ],
-      "authorship_tag": "ABX9TyNhh4EvZfM18kx+TPUKXbBB",
+      "authorship_tag": "ABX9TyMjqER+XotQRQSNXoTBYojK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -594,6 +592,67 @@
       ],
       "metadata": {
         "id": "ThZ-bZoQPd2E"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Kolokwium 2"
+      ],
+      "metadata": {
+        "id": "oAzt5KNVl6kp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GR. 1\n",
+        "\n",
+        "1) Napisz funkcję `find_word` (znajdź słowo) o dwóch parametrach: `letter` (litera) i `text` (tekst). Zadaniem funkcji jest wybranie z tekstu (tj. argumentu parametru `text`) słów, w których litera będąca argumentem parametru `letter` występuje minimum dwa razy. Wielkość liter nie powinna mieć znaczenia. Funkcja powinna zwrócić listę znalezionych słów. Zademonstruj działanie funkcji na dowolnym tekście i literze.\n",
+        "\n",
+        "2) Napisz funkcję `n_letters` o dwóch parametrach: `text` i `number`, która w tekście (tj. argumencie parametru `text`) znajdzie pierwszych n słów, gdzie n, to liczba będąca argumentem parametru `number`, które mają więcej niż n znaków. Funkcja powinna zwrócić listę krotek; krotka powinna składać się z dwóch elementów: (znalezionego) słowa i liczby znaków w tym słowie.\n",
+        "\n",
+        "3) Napisz funkcję `counter` o jednym parametrze `text`. Zadaniem funkcji jest utworzenie i zwrócenie słownika, którego kluczami będą słowa, a wartościami liczba ich występowania w tekście (argumencie parametru `text`)."
+      ],
+      "metadata": {
+        "id": "EghM_zWjmmTK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "j9XREKs7morg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "GR. 2\n",
+        "\n",
+        "1) Napisz funkcję `find_word` (znajdź słowo) o dwóch parametrach `word` (słowo) i `text` (tekst). Zadaniem funkcji jest wybranie z tekstu (tj. argumentu parametru `text`) słów, których częścią jest słowo, które będzie argumentem parametru `word`. Wielkość liter nie powinna mieć znaczenia. Funkcja powinna zwrócić listę znalezionych słów. Zademonstruj działanie funkcji na dowolnym tekście i słowie.\n",
+        "\n",
+        "2) Napisz funkcję `counter` o jednym parametrze `text`. Zadaniem funkcji jest utworzenie i zwrócenie słownika, którego kluczami będą słowa, a wartościami liczba ich występowania w tekście (argumencie parametru `text`).\n",
+        "\n",
+        "3) Napisz funkcję `vowel` o jednym parametrze `word`, która sprawdzi, czy w słowie będącym argumentem parametru `word` są min 3 różne samogłoski. Funkcja powinna zwrócić `True` jeśli tak jest albo `False` w przeciwnym wypadku."
+      ],
+      "metadata": {
+        "id": "N166n4jFmem9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "zGSou7MTl-iA"
       },
       "execution_count": null,
       "outputs": []
