--- a/python_dla_kazdego/wprawki.ipynb
+++ b/python_dla_kazdego/wprawki.ipynb
@@ -11,12 +11,11 @@
         "ABRKwnD_OnLh",
         "fH1mRl-6PCst",
         "1b8WWjXJPjQq",
-        "NVAxWlkzPw42",
         "1ASbnfjSPy7C",
-        "sCZ3LeVlP03k",
-        "XfI9XelVQBv3"
+        "sCZ3LeVlP03k"
       ],
-      "authorship_tag": "ABX9TyMjqER+XotQRQSNXoTBYojK",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO/d6MYonERvGW3jwHA1VEx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -507,54 +506,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# KOLOKWIUM 1"
-      ],
-      "metadata": {
-        "id": "Oj3j7pijRVoV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Gr. 1\n",
-        "1) Napisz program, który z poniższego tekstu wybierze i wyświetli tylko te słowa, których częścią jest słowo \"filozof\" (wielkość liter nie powinna mieć znaczenia).\n",
-        "\n",
-        "2) Na podstawie poniższego tekstu utwórz słownik, którego kluczami będą słowa, a wartościami liczba ich występowania w tekście.\n",
-        "\n",
-        "3) Napisz program, który z poniższego tekstu wybierze i wyświetli 10 słów, które mają w sobie min 3 różne samogłoski.\n",
-        "\n",
-        "\n",
-        "Filozofią zajmowano się w Katolickim Uniwersytecie Lubelskim od początku istnienia tej uczelni. W ramach Wydziału Nauk Humanistycznych funkcjonowała sekcja (grupa) nauk filozoficznych. Poza tym zajęcia z zakresu filozofii prowadzono na innych wydziałach. Czołowymi nauczycielami dyscyplin filozoficznych lub pokrewnych byli: ks. Idzi Radziszewski, ks. Stanisław Domińczak, Bohdan Rutkiewicz, Jacek Woroniecki OP, ks. Józef Pastuszka, Henryk Jakubanis, ks. Antoni Szymański. Statut KUL z 1938 r. przewidywał utworzenie, obok dotychczasowych czterech, nowego wydziału filozoficznego.\n",
-        "Przerwa wojenna spowodowała, że Wydział Filozofii Chrześcijańskiej erygowano dopiero w 1946 r. (uroczyste otwarcie Wydziału miało miejsce 10 XI 1946 r., zajęcia rozpoczęły się kilka dni wcześniej). Zasadniczą rolę w jego organizacji odegrał ks. Józef Pastuszka, pierwszy dziekan. Obok niego głównymi wykładowcami byli: Stefan Swieżawski, ks. Stanisław Adamczyk, ks. Antoni Korcik, gościnnie Stefan Harassek, nieco później Feliks W. Bednarski OP."
-      ],
-      "metadata": {
-        "id": "pTepgTMrRrT8"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Gr. 2\n",
-        "\n",
-        "1) Napisz program, który z poniższego tekstu wybierze i wyświetli tylko te słowa, w których litera \"e\" występuje minimum dwa razy. Wybrane słowa wyświetl tylko małymi literami.\n",
-        "\n",
-        "2) Na podstawie poniższego tekstu utwórz słownik, którego kluczami będą słowa, a wartościami liczba ich występowania w tekście.\n",
-        "\n",
-        "3) Napisz program, który z poniższego tekstu wyświetli pierwszych 10 słów, które mają więcej niż 10 liter.\n",
-        "\n",
-        "\n",
-        "Katolicki Uniwersytet Lubelski Jana Pawła II jest najstarszą uczelnią Lublina i jednym z najstarszych uniwersytetów w Polsce.\n",
-        "Powstał w 1918 r. z inicjatywy ks. Idziego Radziszewskiego, który został pierwszym rektorem. Od początków istnienia zadaniem Uczelni jest służba Bogu i Ojczyźnie - Deo et Patriae.\n",
-        "W ciągu swojej prawie 100-letniej historii KUL stał się jednym z najważniejszych ośrodków myśli katolickiej, który wpływał na kształt nauki i kultury polskiej, zyskując szerokie uznanie w kraju i zagranicą.\n",
-        "KUL dziś jest Uczelnią otwartą na cywilizacyjne i naukowe wyzwania współczesności. Obok teologii, filozofii, nauk społecznych, prawnych i humanistycznych rozwijane są nauki matematyczne i przyrodnicze, by przygotować studentów do pełnej i odpowiedzialnej pracy dla dobra Ojczyzny i Kościoła."
-      ],
-      "metadata": {
-        "id": "MTtdYheRRmS4"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "# Funkcje"
       ],
       "metadata": {
@@ -591,71 +542,121 @@
         ""
       ],
       "metadata": {
-        "id": "ThZ-bZoQPd2E"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Kolokwium 2"
-      ],
-      "metadata": {
-        "id": "oAzt5KNVl6kp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "GR. 1\n",
-        "\n",
-        "1) Napisz funkcję `find_word` (znajdź słowo) o dwóch parametrach: `letter` (litera) i `text` (tekst). Zadaniem funkcji jest wybranie z tekstu (tj. argumentu parametru `text`) słów, w których litera będąca argumentem parametru `letter` występuje minimum dwa razy. Wielkość liter nie powinna mieć znaczenia. Funkcja powinna zwrócić listę znalezionych słów. Zademonstruj działanie funkcji na dowolnym tekście i literze.\n",
-        "\n",
-        "2) Napisz funkcję `n_letters` o dwóch parametrach: `text` i `number`, która w tekście (tj. argumencie parametru `text`) znajdzie pierwszych n słów, gdzie n, to liczba będąca argumentem parametru `number`, które mają więcej niż n znaków. Funkcja powinna zwrócić listę krotek; krotka powinna składać się z dwóch elementów: (znalezionego) słowa i liczby znaków w tym słowie.\n",
-        "\n",
-        "3) Napisz funkcję `counter` o jednym parametrze `text`. Zadaniem funkcji jest utworzenie i zwrócenie słownika, którego kluczami będą słowa, a wartościami liczba ich występowania w tekście (argumencie parametru `text`)."
-      ],
-      "metadata": {
-        "id": "EghM_zWjmmTK"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "j9XREKs7morg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "GR. 2\n",
-        "\n",
-        "1) Napisz funkcję `find_word` (znajdź słowo) o dwóch parametrach `word` (słowo) i `text` (tekst). Zadaniem funkcji jest wybranie z tekstu (tj. argumentu parametru `text`) słów, których częścią jest słowo, które będzie argumentem parametru `word`. Wielkość liter nie powinna mieć znaczenia. Funkcja powinna zwrócić listę znalezionych słów. Zademonstruj działanie funkcji na dowolnym tekście i słowie.\n",
-        "\n",
-        "2) Napisz funkcję `counter` o jednym parametrze `text`. Zadaniem funkcji jest utworzenie i zwrócenie słownika, którego kluczami będą słowa, a wartościami liczba ich występowania w tekście (argumencie parametru `text`).\n",
-        "\n",
-        "3) Napisz funkcję `vowel` o jednym parametrze `word`, która sprawdzi, czy w słowie będącym argumentem parametru `word` są min 3 różne samogłoski. Funkcja powinna zwrócić `True` jeśli tak jest albo `False` w przeciwnym wypadku."
-      ],
-      "metadata": {
-        "id": "N166n4jFmem9"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
         "id": "zGSou7MTl-iA"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Klasy"
+      ],
+      "metadata": {
+        "id": "xh4b3D1Cztrx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Wprawka 1\n",
+        "\n",
+        "Zdefiniuj klasę `Scoop` (gałka lodów), która reprezentuje pojedynczą gałkę lodów, z konstruktorem o pojedynczym atrybucie `flavor` (smak), który możesz zainicjować podczas tworzenia egzemplarzy klasy `Scoop`. \n",
+        "\n",
+        "Po utworzeniu klasy napisz funkcję `create_scoops` (utwórz gałki lodów). UWAGA! Funkcja powinan być poza klasą Scoop!. Zadaniem funkcji `create_scoops` jest 1) utworzenie listę o nazwie `scoops` złożoną z trzech egzemplarzy klasy `Scoop`, z których każda ma inny smak (`flavor`) oraz 2) za pomocą odpowiedniej pętli wydrukowanie na ekranie smak każdej gałki lodów.\n"
+      ],
+      "metadata": {
+        "id": "tUKE1kKSzxAz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Gkpr0r7zTluj"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Wprawka 2\n",
+        "\n",
+        "Zdefiniuj klasę `Car` (samochód) z konstruktorem o atrybutach `vin_number` (numer VIN), `brand` (marka) oraz `mileage` (przebieg). Utwórz metodę, która może zmieniać wartość atrybutu `mileage`. Utwórz klasę `Bus` (autobus) dziedziczącą po `Car` w następujący sposób:\n",
+        "\n",
+        "```\n",
+        "class Bus(Vehicle):\n",
+        "    pass\n",
+        "```\n",
+        "\n",
+        "Na koniec \n",
+        "\n",
+        "1. Utwórz po jednym egzemplarzu klasy `Car` oraz `Bus`.\n",
+        "2. Wydrukuj na ekranie ich przebieg.\n",
+        "3. Zmień przebieg w obu egzemplarzach.\n",
+        "4. Wydrukuj na ekranie nowe przebiegi."
+      ],
+      "metadata": {
+        "id": "vf1P4UMunvs4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Vehicle:\n",
+        "  def __init__(self, name, mileage, capacity):\n",
+        "      self.name = name\n",
+        "      self.mileage = mileage\n",
+        "      self.capacity = capacity\n",
+        "\n",
+        "  def seating_capacity(self, capacity):\n",
+        "      self.capacity = capacity\n",
+        "\n",
+        "class Bus(Vehicle):\n",
+        "  pass\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oBBL40mmKo8w"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bus = Bus('name', 'mil', 'cap')\n",
+        "bus.seating_capacity('bob')\n",
+        "bus.capacity"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "0CDkfvHalpAh",
+        "outputId": "708c0136-0e4b-47ff-be1e-a5fc2b796239"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'bob'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     }
   ]
 }
