kolekcje pythona + listy, słowniki i zbiory składane

--- a/python_dla_kazdego/python_dla_humanistow.ipynb
+++ b/python_dla_kazdego/python_dla_humanistow.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMixcytmVbMP1QLCQNE0usN",
+      "authorship_tag": "ABX9TyPbZRuvJE3IAO1NasF4kPiH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3591,6 +3591,298 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Kolekcje Pythona *"
+      ],
+      "metadata": {
+        "id": "hFMVe4nfH148"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l = [1,2]\n",
+        "s = {3,4}\n",
+        "t = (5,6)\n",
+        "d = {7:\"buh\", 8:\"buha\"}\n",
+        "\n",
+        "l.extend(s)\n",
+        "print(l)\n",
+        "\n",
+        "l.extend(t)\n",
+        "print(l)\n",
+        "\n",
+        "l.extend(d)\n",
+        "print(l)"
+      ],
+      "metadata": {
+        "id": "C4uFZkpOH5eP",
+        "outputId": "57f15c2d-59d3-4cfd-c23c-b28fd7b17f10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4]\n",
+            "[1, 2, 3, 4, 5, 6]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sorted({2, 1, 4, 3})"
+      ],
+      "metadata": {
+        "id": "LJBOVYEAICHe",
+        "outputId": "82eaf31b-e9ff-4214-945b-3ffe81297e90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{1,2}.union([3,4])\n",
+        "{1,2}.union((3,4))\n",
+        "{1,2}.union({3:\"buh\", 4:\"buha\"})"
+      ],
+      "metadata": {
+        "id": "3vWSs59MIG1C",
+        "outputId": "ee1c483d-5c67-489d-8b5a-0e52911ba2ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 2, 3, 4}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Listy, słowniki i zbiory składane *"
+      ],
+      "metadata": {
+        "id": "DzoU9qXjIL5R"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Listy składane"
+      ],
+      "metadata": {
+        "id": "QU3RsegGISyl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prices = [100, 150, 200]\n",
+        "\n",
+        "prices_increased = []\n",
+        "for price in prices:\n",
+        "  prices_increased.append(price * 1.20)\n",
+        "\n",
+        "prices_increased  "
+      ],
+      "metadata": {
+        "id": "WlTv_oIPINm5",
+        "outputId": "d84cbe19-6a8f-4485-d45c-73fabd368287",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[120.0, 180.0, 240.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[price * 1.20  for price in prices]\n"
+      ],
+      "metadata": {
+        "id": "wFUZYCQfIaVg",
+        "outputId": "3e7959a2-5978-4899-fb9e-55ba8cab7b18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[120.0, 180.0, 240.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Słowniki składane"
+      ],
+      "metadata": {
+        "id": "ZWYneBlhIjQ1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = ['mandarynki', 'jabłka', 'kiwi']\n",
+        "prices = [15, 10, 20]\n",
+        "\n",
+        "fruits_prices_dict = {fruit:price for fruit, price in zip(fruits, prices)}\n",
+        "fruits_prices_dict"
+      ],
+      "metadata": {
+        "id": "0IJzX4MzIlWL",
+        "outputId": "fcab93e7-ff14-469f-cbc1-54c162aaaab6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'jabłka': 10, 'kiwi': 20, 'mandarynki': 15}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{value: key for key, value in fruits_prices_dict.items()}"
+      ],
+      "metadata": {
+        "id": "9wKk6UQYIoyg",
+        "outputId": "2e94dbe3-12c8-45fe-e57d-816b61cccb52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{10: 'jabłka', 15: 'mandarynki', 20: 'kiwi'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Zbiory składane"
+      ],
+      "metadata": {
+        "id": "DX3ADk8JJiQi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strophe = '''\n",
+        "Szybko, zbudź się, szybko, wstawaj.\n",
+        "Szybko, szybko, stygnie kawa!\n",
+        "Szybko, zęby myj i ręce!\n",
+        "'''\n",
+        "\n",
+        "bag_of_words = {word for word in strophe.lower().replace('.', '').replace(',', '').replace('!', '').split()}\n",
+        "bag_of_words"
+      ],
+      "metadata": {
+        "id": "Nx1JyZ_3IoBj",
+        "outputId": "908c80ce-22a7-41b0-c7b5-f49b804e87d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'i',\n",
+              " 'kawa',\n",
+              " 'myj',\n",
+              " 'ręce',\n",
+              " 'się',\n",
+              " 'stygnie',\n",
+              " 'szybko',\n",
+              " 'wstawaj',\n",
+              " 'zbudź',\n",
+              " 'zęby'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Armyrl51hFBb"
       },
@@ -4667,7 +4959,7 @@
       "metadata": {
         "id": "SKa3Kri3_D4k"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4730,7 +5022,7 @@
       "metadata": {
         "id": "nM_yFAMF8LI8"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4742,7 +5034,7 @@
       "metadata": {
         "id": "4COjb0E48ca-"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4757,7 +5049,7 @@
         "id": "luRXefS98haY",
         "outputId": "d21d0f11-5f43-449d-ebeb-269f9edc2853"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4787,7 +5079,7 @@
       "metadata": {
         "id": "Fu5DLzOinD8T"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4798,7 +5090,7 @@
       "metadata": {
         "id": "kLFhz_-8oZKx"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4813,7 +5105,7 @@
         "id": "80bOLZpQpa3L",
         "outputId": "d6df05c9-dec9-4e8e-a1d9-0da849d908ff"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4835,7 +5127,7 @@
       "metadata": {
         "id": "mTK0DcGDpqpR"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4846,7 +5138,7 @@
       "metadata": {
         "id": "2Ns-uyxqqQbS"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4861,7 +5153,7 @@
         "id": "8EBxTwVpqWhq",
         "outputId": "5b4d65d9-a33a-499f-cbdb-7c8efe5ecda2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4885,7 +5177,7 @@
         "id": "tSLtv_wmqbYN",
         "outputId": "56dd10e0-6db3-4fc8-fbe1-bd1b9e25cbdb"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4922,7 +5214,7 @@
       "metadata": {
         "id": "IsbpUdFfquzY"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4933,7 +5225,7 @@
       "metadata": {
         "id": "alRzPR4qrKWM"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4947,7 +5239,7 @@
       "metadata": {
         "id": "jL4RxI7Brcgd"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4958,7 +5250,7 @@
       "metadata": {
         "id": "lZmv6Ziirlvh"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4974,7 +5266,7 @@
         "id": "Aafrxrcf17H0",
         "outputId": "02e63281-d08d-4f2c-c5b4-5c05b9119472"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
